test/negative/lex_unterminated_str.mut
# Negative: unterminated string literal
x: str = "hello
